<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vivetuentrada.registerapp.RegisterActivity">

    <ProgressBar
        android:id="@+id/scan_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/register_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/codeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scan_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:ems="14"
            android:hint="@string/register_code_bar"
            android:inputType="text" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/welcome"
            android:layout_marginTop="16dp"
            android:text="@string/register_info" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/codeText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:text="@string/register_registry_code" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/register_welcome"
            android:textSize="20sp" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/register_scan" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/scan_button"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/scan_button"
            android:layout_marginBottom="26dp"
            android:text="@string/logout" />


        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_button"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/code"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical|center"
            android:text=""
            android:textColor="#FF0000"
            android:textSize="20sp" />



    </RelativeLayout>

    <!-- Login progress -->


</RelativeLayout>
